--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <input type="text" id="input-box" placeholder="Add your text">
             <button>Add</button>
         </div>
+        <ul id="list-container"></ul>
+        <li>Task 1</li>
+        <li>Task 2</li>
+        <li>Task 3</li>
     </div>
 </div>
 </body>
