--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,20 @@
     <link rel="stylesheet" href="style.css">
     <title>To Do List App</title>
 </head>
+
 <body>
-<div class="container">
-    <div class="todo-app">
-        <h2>To-Do List <img src="images/icon.png" alt="icon"></h2>
-        <div class="row">
-            <input type="text" id="input-box" placeholder="Add your text">
-            <button>Add</button>
+    <div class="container">
+        <div class="todo-app">
+            <h2>To-Do List <img src="images/icon.png" alt="icon"></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add your text">
+                <button onclick="addTask()">Add</button>
+            </div>
+            <ul id="list-container">
+            </ul>
         </div>
-        <ul id="list-container"></ul>
-        <li>Task 1</li>
-        <li>Task 2</li>
-        <li>Task 3</li>
     </div>
-</div>
+    <script src="script.js"></script>
 </body>
+
 </html>
